<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp">

    <ImageView
        android:id="@+id/notification_icon_text"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/notification_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/notification_text"
        app:srcCompat="@drawable/basic_profile_picture" />

    <TextView
        android:id="@+id/notification_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="Test notification text"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintStart_toEndOf="@+id/notification_icon_text"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:src="@drawable/delete"
        app:layout_constraintBottom_toBottomOf="@+id/notification_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/notification_text" />
</androidx.constraintlayout.widget.ConstraintLayout>